Bug #42478: Simplify UsernameHandler.format_username() and increase robustness
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.1/ucs-school-4.1r2@74308 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,10 @@
+ucs-school-import (14.0.16-33) unstable; urgency=medium
+
+  * Bug #42478: Simplify UsernameHandler.format_username() and increase
+  	robustness
+
+ -- Florian Best <best@univention.de>  Thu, 10 Nov 2016 18:00:20 +0100
+
 ucs-school-import (14.0.16-32) unstable; urgency=low
 
   * Bug #42513: rename and move consistency check to common code path
