Bug #42478: prevent ldap.INVALID_DN_SYNTAX cn=,cn=unique-usernames,...  error for usernames without any valid character
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.1/ucs-school-4.1r2@74346 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,10 @@
+ucs-school-import (14.0.16-34) unstable; urgency=medium
+
+  * Bug #42478: prevent ldap.INVALID_DN_SYNTAX cn=,cn=unique-usernames,...
+    error for usernames without any valid character
+
+ -- Florian Best <best@univention.de>  Fri, 11 Nov 2016 13:32:01 +0100
+
 ucs-school-import (14.0.16-33) unstable; urgency=medium
 
   * Bug #42478: Simplify UsernameHandler.format_username() and increase
