--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (3.0.16-43) unstable; urgency=medium
+
+  * Bug #42478: adjust test case
+
+ -- Florian Best <best@univention.de>  Fri, 11 Nov 2016 12:36:49 +0100
+
 ucs-test-ucsschool (3.0.16-43) unstable; urgency=low
 
   * Bug #42863: adjusted essential/user.py to reproduce UMC behaviour
