Bug #42399: Add SchoolSanitizer with correct error handling
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.1/ucs-school-4.1r2@74365 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-lib/debian/changelog
+++ b/ucs-school-lib/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-lib (9.0.28-1) unstable; urgency=medium
+
+  * Bug #42399: Add SchoolSanitizer with correct error handling
+
+ -- Florian Best <best@univention.de>  Fri, 11 Nov 2016 16:37:27 +0100
+
 ucs-school-lib (9.0.27-1) unstable; urgency=medium
 
   * Bug #42736: Fix UDM superordinate handling
