Bug #42399: use SchoolSanitizer
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.1/ucs-school-4.1r2@74366 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-umc-rooms/debian/changelog
+++ b/ucs-school-umc-rooms/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-rooms (13.0.1-1) unstable; urgency=medium
+
+  * Bug #42399: use SchoolSanitizer
+
+ -- Florian Best <best@univention.de>  Fri, 11 Nov 2016 16:53:39 +0100
+
 ucs-school-umc-rooms (13.0.0-2) unstable; urgency=medium
 
   * Bug #41130: use ucsschool.lib everywhere
