--- a/ucs-school-umc-computerroom/debian/changelog
+++ b/ucs-school-umc-computerroom/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-computerroom (8.0.9-1) unstable; urgency=medium
+
+  * Bug #42399: use SchoolSanitizer
+
+ -- Florian Best <best@univention.de>  Fri, 11 Nov 2016 16:53:08 +0100
+
 ucs-school-umc-computerroom (8.0.8-1) unstable; urgency=low
 
   * Bug #41752: enable buttons in grid only if available; merged duplicate code
