--- a/ucs-school-umc-exam/debian/changelog
+++ b/ucs-school-umc-exam/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-exam (6.0.8-1) unstable; urgency=medium
+
+  * Bug #42399: use SchoolSanitizer
+
+ -- Florian Best <best@univention.de>  Fri, 11 Nov 2016 16:53:13 +0100
+
 ucs-school-umc-exam (6.0.7-7) unstable; urgency=medium
 
   * Bug #41568: Make it possible to start exam for student not underneath of
