--- a/ucs-school-umc-groups/debian/changelog
+++ b/ucs-school-umc-groups/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-groups (6.0.4-1) unstable; urgency=medium
+
+  * Bug #42399: use SchoolSanitizer
+
+ -- Florian Best <best@univention.de>  Fri, 11 Nov 2016 16:53:21 +0100
+
 ucs-school-umc-groups (6.0.3-2) unstable; urgency=medium
 
   * Bug #40539: prevent non-school-users being added to working groups
