--- a/ucs-school-umc-printermoderation/debian/changelog
+++ b/ucs-school-umc-printermoderation/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-printermoderation (13.0.4-1) unstable; urgency=medium
+
+  * Bug #42399: use SchoolSanitizer
+
+ -- Florian Best <best@univention.de>  Fri, 11 Nov 2016 16:53:33 +0100
+
 ucs-school-umc-printermoderation (13.0.3-7) unstable; urgency=low
 
   * Bug #41374: support restricted printers
