--- a/ucs-school-umc-users/debian/changelog
+++ b/ucs-school-umc-users/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-users (12.0.2-1) unstable; urgency=medium
+
+  * Bug #42399: use SchoolSanitizer
+
+ -- Florian Best <best@univention.de>  Fri, 11 Nov 2016 16:53:45 +0100
+
 ucs-school-umc-users (12.0.1-1) unstable; urgency=medium
 
   * Bug #41117: remove unnecessary use of search_base
