Bug #42478: fix typo
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.1/ucs-school-4.1r2@74370 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (3.0.16-44) unstable; urgency=low
+
+  * Bug #42478: fix typo
+
+ -- Daniel Troeder <troeder@univention.de>  Sun, 13 Nov 2016 17:37:38 +0100
+
 ucs-test-ucsschool (3.0.16-43) unstable; urgency=medium
 
   * Bug #42478: adjust test case
