--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (3.0.16-45) unstable; urgency=low
+
+  * Bug #42478: add test with moved COUNTER variable
+
+ -- Daniel Troeder <troeder@univention.de>  Sun, 13 Nov 2016 21:48:14 +0100
+
 ucs-test-ucsschool (3.0.16-44) unstable; urgency=low
 
   * Bug #42478: fix typo
