Bug #42942: added additional log output in case of an exception
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.1/ucs-school-4.1r2@74379 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-import (14.0.16-35) unstable; urgency=low
+
+  * Bug #42942: added additional log output in case of an exception
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Mon, 14 Nov 2016 11:03:10 +0100
+
 ucs-school-import (14.0.16-34) unstable; urgency=medium
 
   * Bug #42478: prevent ldap.INVALID_DN_SYNTAX cn=,cn=unique-usernames,...
