Bug #42478: remove duplicated code
* username = name is already defined at the top
* brackets get added by the pattern group and afterwards removed

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.1/ucs-school-4.1r2@74388 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-import (14.0.16-36) unstable; urgency=medium
+
+  * Bug #42478: remove duplicated code
+
+ -- Florian Best <best@univention.de>  Mon, 14 Nov 2016 11:53:00 +0100
+
 ucs-school-import (14.0.16-35) unstable; urgency=low
 
   * Bug #42942: added additional log output in case of an exception
