--- a/ucs-school-lib/debian/changelog
+++ b/ucs-school-lib/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-lib (9.0.28-2) unstable; urgency=medium
+
+  * Bug #42399: use the correct DN string of objectExists
+
+ -- Florian Best <best@univention.de>  Mon, 14 Nov 2016 14:03:15 +0100
+
 ucs-school-lib (9.0.28-1) unstable; urgency=medium
 
   * Bug #42399: Add SchoolSanitizer with correct error handling
