Bug #41229: add error handling for noObject exceptions
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.1/ucs-school-4.1r2@74418 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-umc-wizards/debian/changelog
+++ b/ucs-school-umc-wizards/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-wizards (8.0.0-13) unstable; urgency=medium
+
+  * Bug #41229: add error handling for noObject exceptions
+
+ -- Florian Best <best@univention.de>  Mon, 14 Nov 2016 15:35:03 +0100
+
 ucs-school-umc-wizards (8.0.0-12) unstable; urgency=medium
 
   * Bug #42863: don't remove teacher from classes when editing her
