Bug #41344: fix escaping
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.1/ucs-school-4.1r2@74433 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (3.0.16-47) unstable; urgency=medium
+
+  * Bug #41344: fix escaping
+
+ -- Florian Best <best@univention.de>  Tue, 15 Nov 2016 10:35:47 +0100
+
 ucs-test-ucsschool (3.0.16-46) unstable; urgency=low
 
   * Bug #41344: wait_for_drs_replication after creation, not after deletion
