Bug #42495: fix indentation
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.1/ucs-school-4.1r2@74439 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-lib/debian/changelog
+++ b/ucs-school-lib/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-lib (9.0.29-2) unstable; urgency=medium
+
+  * Bug #42495: fix indentation
+
+ -- Florian Best <best@univention.de>  Tue, 15 Nov 2016 13:02:26 +0100
+
 ucs-school-lib (9.0.29-1) unstable; urgency=medium
 
   * Bug #42495: optimize internal handling of group modifications
