Bug #41760: check if app versions on local host and DC master differ
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.1/ucs-school-4.1r2@74445 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-metapackage/debian/changelog
+++ b/ucs-school-metapackage/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-metapackage (9.0.2-9) unstable; urgency=low
+
+  * Bug #41760: check if app versions on local host and DC master differ
+
+ -- Daniel Troeder <troeder@univention.de>  Tue, 15 Nov 2016 16:05:09 +0100
+
 ucs-school-metapackage (9.0.2-8) unstable; urgency=medium
 
   * Bug #40418: Add groups to connector/s4/mapping/group/ignorelist
