Bug #41007: use UMC instead of SSH when receiving information about schools
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.1/ucs-school-4.1r2@74454 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-umc-installer/debian/changelog
+++ b/ucs-school-umc-installer/debian/changelog
@@ -1,3 +1,10 @@
+ucs-school-umc-installer (4.0.1-1) unstable; urgency=medium
+
+  * Bug #41007: use UMC instead of SSH when receiving information about
+  	schools
+
+ -- Florian Best <best@univention.de>  Tue, 15 Nov 2016 16:10:50 +0100
+
 ucs-school-umc-installer (4.0.0-5) unstable; urgency=medium
 
   * Bug #42215: Corrected a typo.
