--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,13 @@
+ucs-test-ucsschool (3.0.16-48) unstable; urgency=low
+
+  * Bug #41243: get username from user in LDAP to prevent AttributeError for
+    escape_filter_chars(None) in 203_import-users_username_scheme
+  * Bug #42313: do not check_new_and_removed_users() as LDAP/S4 is async and
+    numbers don't add up, but check of username is done anyway
+    (in 215_import-users_illegal_chars_in_username)
+
+ -- Daniel Troeder <troeder@univention.de>  Wed, 16 Nov 2016 10:30:40 +0100
+
 ucs-test-ucsschool (3.0.16-47) unstable; urgency=medium
 
   * Bug #41344: fix escaping
