Bug #41252: use symbol from python lib instead of number
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.1/ucs-school-4.1r2@74483 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-umc-distribution/debian/changelog
+++ b/ucs-school-umc-distribution/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-distribution (14.0.2-3) unstable; urgency=low
+
+  * Bug #41252: use symbol from python lib instead of number
+
+ -- Daniel Troeder <troeder@univention.de>  Wed, 16 Nov 2016 14:59:18 +0100
+
 ucs-school-umc-distribution (14.0.2-2) unstable; urgency=low
 
   * Bug #41252: don't fail, when trying to create cachedir a second time
