--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-import (14.0.16-37) unstable; urgency=low
+
+  * Bug #42503: make_email() now honors config[mandatory_attributes]
+
+ -- Daniel Troeder <troeder@univention.de>  Wed, 16 Nov 2016 15:12:21 +0100
+
 ucs-school-import (14.0.16-36) unstable; urgency=medium
 
   * Bug #42478: remove duplicated code
