--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,10 @@
+ucs-test-ucsschool (3.0.16-49) unstable; urgency=low
+
+  * Bug #42105: lower chance of name clash
+  * Bug #42503: revert workaround
+
+ -- Daniel Troeder <troeder@univention.de>  Wed, 16 Nov 2016 15:16:19 +0100
+
 ucs-test-ucsschool (3.0.16-48) unstable; urgency=low
 
   * Bug #41243: get username from user in LDAP to prevent AttributeError for
