Bug #42437: fix ACL's for school users which are domain admins at the same time
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.1/ucs-school-4.1r2@74508 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-ldap-acls-master/debian/changelog
+++ b/ucs-school-ldap-acls-master/debian/changelog
@@ -1,3 +1,10 @@
+ucs-school-ldap-acls-master (14.0.2-1) unstable; urgency=medium
+
+  * Bug #42437: fix ACL's for school users which are domain admins at the same
+    time
+
+ -- Florian Best <best@univention.de>  Wed, 16 Nov 2016 15:32:56 +0100
+
 ucs-school-ldap-acls-master (14.0.1-15) unstable; urgency=low
 
   * bug #41725: bump version because changelog entries of reverted commits
