* Bug #40435: Make selective-udm return the DN * Plus other fixes by fbest
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.1/ucs-school-4.1r2@74514 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/univention-management-console-module-selective-udm/debian/changelog
+++ b/univention-management-console-module-selective-udm/debian/changelog
@@ -1,3 +1,10 @@
+univention-management-console-module-selective-udm (5.0.0-2) unstable; urgency=medium
+
+  * Bug #40435: Make selective-udm return the DN
+  * Plus other fixes by fbest
+
+ -- Arvid Requate <requate@univention.de>  Wed, 16 Nov 2016 20:10:14 +0100
+
 univention-management-console-module-selective-udm (5.0.0-1) unstable; urgency=medium
 
   * Bug #39534: Start UCS@school 4.1 development
