--- a/ucs-school-umc-wizards/debian/changelog
+++ b/ucs-school-umc-wizards/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-wizards (8.0.0-14) unstable; urgency=medium
+
+  * Bug #41229: adjust translation
+
+ -- Florian Best <best@univention.de>  Thu, 17 Nov 2016 17:05:58 +0100
+
 ucs-school-umc-wizards (8.0.0-13) unstable; urgency=medium
 
   * Bug #41229: add error handling for noObject exceptions
