Bug #41243: get username from user in LDAP to prevent AttributeError
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.1/ucs-school-4.1r2@74563 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,10 @@
+ucs-test-ucsschool (3.0.16-50) unstable; urgency=low
+
+  * Bug #41243: get username from user in LDAP to prevent AttributeError for
+    escape_filter_chars(None) in 203_import-users_username_scheme
+
+ -- Daniel Troeder <troeder@univention.de>  Fri, 18 Nov 2016 08:15:57 +0100
+
 ucs-test-ucsschool (3.0.16-49) unstable; urgency=low
 
   * Bug #42105: lower chance of name clash
