Bug #41007: fix python2.6 syntax, remove obsolete dependency
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.1/ucs-school-4.1r2@74564 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-umc-installer/debian/changelog
+++ b/ucs-school-umc-installer/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-installer (4.0.2-1) unstable; urgency=medium
+
+  * Bug #41007: fix python2.6 syntax, remove obsolete dependency
+
+ -- Florian Best <best@univention.de>  Fri, 18 Nov 2016 09:59:55 +0100
+
 ucs-school-umc-installer (4.0.1-1) unstable; urgency=medium
 
   * Bug #41007: use UMC instead of SSH when receiving information about
