Bug #42112: don't change an existing expiration date when deleting
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.1/ucs-school-4.1r2@74568 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-import (14.0.16-38) unstable; urgency=low
+
+  * Bug #42112: don't change an existing expiration date when "deleting"
+
+ -- Daniel Troeder <troeder@univention.de>  Fri, 18 Nov 2016 12:30:34 +0100
+
 ucs-school-import (14.0.16-37) unstable; urgency=low
 
   * Bug #42503: make_email() now honors config[mandatory_attributes]
