--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (3.0.16-51) unstable; urgency=medium
+
+  * Bug #40527: reenable test
+
+ -- Florian Best <best@univention.de>  Fri, 18 Nov 2016 14:07:46 +0100
+
 ucs-test-ucsschool (3.0.16-50) unstable; urgency=low
 
   * Bug #41243: get username from user in LDAP to prevent AttributeError for
