--- a/ucs-school-webproxy/debian/changelog
+++ b/ucs-school-webproxy/debian/changelog
@@ -1,3 +1,10 @@
+ucs-school-webproxy (12.0.4-1) unstable; urgency=medium
+
+  * Bug #41749: adjust listener to only react to groups belonging to local
+  	schools
+
+ -- Florian Best <best@univention.de>  Fri, 18 Nov 2016 15:53:00 +0100
+
 ucs-school-webproxy (12.0.3-6) unstable; urgency=medium
 
   * Bug #41361: add univention-reload-service
