Bug #41989: add test for deletion of users home directory by listener module
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.1/ucs-school-4.1r2@74631 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,11 @@
+ucs-test-ucsschool (3.0.16-52) unstable; urgency=low
+
+  * Bug #41989: add test for deletion of users home directory by listener
+    module, test if home is also removed if user is not deleted, but moved
+    to another OU
+
+ -- Daniel Troeder <troeder@univention.de>  Mon, 21 Nov 2016 13:11:34 +0100
+
 ucs-test-ucsschool (3.0.16-51) unstable; urgency=medium
 
   * Bug #40527: reenable test
