Bug #41989: remove home is user is removed from school (adapt to ou-overlapping users)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.1/ucs-school-4.1r2@74640 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-old-homedirs/debian/changelog
+++ b/ucs-school-old-homedirs/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-old-homedirs (11.0.0-2) unstable; urgency=low
+
+  * Bug #41989: remove-old-homedirs listener adapted to ou-overlapping users
+
+ -- Daniel Troeder <troeder@univention.de>  Fri, 18 Nov 2016 17:08:31 +0100
+
 ucs-school-old-homedirs (11.0.0-1) unstable; urgency=medium
 
   * Bug #39534: Start UCS@school 4.1 development
