Bug #41910: test that when moving a user into another school, the workgroups of the previous school are removed
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.1/ucs-school-4.1r2@74646 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,10 @@
+ucs-test-ucsschool (3.0.16-53) unstable; urgency=low
+
+  * Bug #41910: test that when moving a user into another school, the
+    workgroups of the previous school are removed
+
+ -- Daniel Troeder <troeder@univention.de>  Mon, 21 Nov 2016 15:49:19 +0100
+
 ucs-test-ucsschool (3.0.16-52) unstable; urgency=low
 
   * Bug #41989: add test for deletion of users home directory by listener
