--- a/ucs-school-old-homedirs/debian/changelog
+++ b/ucs-school-old-homedirs/debian/changelog
@@ -1,3 +1,10 @@
+ucs-school-old-homedirs (11.0.0-3) unstable; urgency=low
+
+  * Bug #41989: don't log complete traceback in case the LDAP server cannot be
+    reached or the credentials are wrong
+
+ -- Daniel Troeder <troeder@univention.de>  Tue, 22 Nov 2016 08:38:50 +0100
+
 ucs-school-old-homedirs (11.0.0-2) unstable; urgency=low
 
   * Bug #41989: remove-old-homedirs listener adapted to ou-overlapping users
