Bug #37955: remove leftover home directories from previous exams
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.1/ucs-school-4.1r2@74660 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-umc-exam/debian/changelog
+++ b/ucs-school-umc-exam/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-exam (6.0.8-2) unstable; urgency=low
+
+  * Bug #37955: remove leftover home directories from previous exams
+
+ -- Daniel Troeder <troeder@univention.de>  Tue, 22 Nov 2016 10:35:16 +0100
+
 ucs-school-umc-exam (6.0.8-1) unstable; urgency=medium
 
   * Bug #42399: use SchoolSanitizer
