--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (3.0.16-54) unstable; urgency=low
+
+  * Bug #42313: wait for replication
+
+ -- Daniel Troeder <troeder@univention.de>  Tue, 22 Nov 2016 14:43:32 +0100
+
 ucs-test-ucsschool (3.0.16-53) unstable; urgency=low
 
   * Bug #41910: test that when moving a user into another school, the
