Bug #40527: fix password changing tests
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.1/ucs-school-4.1r2@74671 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (3.0.16-55) unstable; urgency=medium
+
+  * Bug #40527: fix password changing tests
+
+ -- Florian Best <best@univention.de>  Tue, 22 Nov 2016 18:31:15 +0100
+
 ucs-test-ucsschool (3.0.16-54) unstable; urgency=low
 
   * Bug #42313: wait for replication
