Bug #40901: prevent removing exam state if the javascript frontend does not know about an currently written exam
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.1/ucs-school-4.1r2@74672 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-umc-computerroom/debian/changelog
+++ b/ucs-school-umc-computerroom/debian/changelog
@@ -1,3 +1,10 @@
+ucs-school-umc-computerroom (8.0.10-1) unstable; urgency=medium
+
+  * Bug #40901: prevent removing exam state if the javascript frontend does
+  	not know about an currently written exam
+
+ -- Florian Best <best@univention.de>  Tue, 22 Nov 2016 21:07:37 +0100
+
 ucs-school-umc-computerroom (8.0.9-1) unstable; urgency=medium
 
   * Bug #42399: use SchoolSanitizer
