--- a/ucs-school-umc-exam/debian/changelog
+++ b/ucs-school-umc-exam/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-exam (6.0.9-1) unstable; urgency=medium
+
+  * Bug #40901: fix loading of exam state if the computerroom module is already opened
+
+ -- Florian Best <best@univention.de>  Tue, 22 Nov 2016 21:39:22 +0100
+
 ucs-school-umc-exam (6.0.8-2) unstable; urgency=low
 
   * Bug #37955: remove leftover home directories from previous exams
