Bug #42065: Create shares of workgroups with the host account instead of e.g. the teacher
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.1/ucs-school-4.1r2@74682 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-lib/debian/changelog
+++ b/ucs-school-lib/debian/changelog
@@ -1,3 +1,10 @@
+ucs-school-lib (9.0.29-3) unstable; urgency=medium
+
+  * Bug #42065: Create shares of workgroups with the host account instead of
+  	e.g. the teacher
+
+ -- Florian Best <best@univention.de>  Wed, 23 Nov 2016 11:28:45 +0100
+
 ucs-school-lib (9.0.29-2) unstable; urgency=medium
 
   * Bug #42495: fix indentation
