Bug #41749: make unbind implicit
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.1/ucs-school-4.1r2@74683 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-webproxy/debian/changelog
+++ b/ucs-school-webproxy/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-webproxy (12.0.4-2) unstable; urgency=medium
+
+  * Bug #41749: make unbind implicit
+
+ -- Florian Best <best@univention.de>  Wed, 23 Nov 2016 11:41:08 +0100
+
 ucs-school-webproxy (12.0.4-1) unstable; urgency=medium
 
   * Bug #41749: adjust listener to only react to groups belonging to local
