--- a/ucs-school-metapackage/debian/changelog
+++ b/ucs-school-metapackage/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-metapackage (9.0.2-11) unstable; urgency=low
+
+  * Bug #41760: set executable flag on app version test script
+
+ -- Daniel Troeder <troeder@univention.de>  Wed, 23 Nov 2016 11:59:17 +0100
+
 ucs-school-metapackage (9.0.2-10) unstable; urgency=low
 
   * Bug #41760: compare app versions in separate join script
