Revert svn r74509  "Bug #42065: restrict access to shares; school admins still can create shares"
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.1/ucs-school-4.1r2@74691 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-ldap-acls-master/debian/changelog
+++ b/ucs-school-ldap-acls-master/debian/changelog
@@ -1,9 +1,14 @@
+ucs-school-ldap-acls-master (14.0.2-2) unstable; urgency=medium
+
+  * Revert svn r74509  "Bug #42065: restrict access to shares; school
+    admins still can create shares"
+
+ -- Florian Best <best@univention.de>  Wed, 23 Nov 2016 11:50:45 +0100
+
 ucs-school-ldap-acls-master (14.0.2-1) unstable; urgency=medium
 
   * Bug #42437: fix ACL's for school users which are domain admins at the same
     time
-  * Bug #42065: restrict access to shares; school admins still can create
-    shares
 
  -- Florian Best <best@univention.de>  Wed, 16 Nov 2016 15:32:56 +0100
 
