--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (3.0.17-1) unstable; urgency=medium
+
+  * Bug #40527: fix ucs-test header
+
+ -- Florian Best <best@univention.de>  Wed, 23 Nov 2016 14:36:13 +0100
+
 ucs-test-ucsschool (3.0.16-55) unstable; urgency=medium
 
   * Bug #40527: fix password changing tests
