--- a/ucs-school-umc-computerroom/debian/changelog
+++ b/ucs-school-umc-computerroom/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-computerroom (8.0.11-1) unstable; urgency=medium
+
+  * Bug #40901: fixup
+
+ -- Florian Best <best@univention.de>  Thu, 24 Nov 2016 11:05:39 +0100
+
 ucs-school-umc-computerroom (8.0.10-1) unstable; urgency=medium
 
   * Bug #40901: prevent removing exam state if the javascript frontend does
