--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (3.0.17-2) unstable; urgency=medium
+
+  * Bug #40527: fix typo
+
+ -- Florian Best <best@univention.de>  Thu, 24 Nov 2016 11:21:52 +0100
+
 ucs-test-ucsschool (3.0.17-1) unstable; urgency=medium
 
   * Bug #40527: fix ucs-test header
