Bug #43045: do not copy RecordUID and SourceUID for exam users
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.1/ucs-school-4.1r2@74726 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-umc-exam/debian/changelog
+++ b/ucs-school-umc-exam/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-exam (6.0.10-1) unstable; urgency=low
+
+  * Bug #43045: do not copy RecordUID and SourceUID for exam users
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Thu, 24 Nov 2016 11:58:43 +0100
+
 ucs-school-umc-exam (6.0.9-1) unstable; urgency=medium
 
   * Bug #40901: fix loading of exam state if the computerroom module is already opened
