Bug #41007: close file descriptors of subprocesses
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.1/ucs-school-4.1r2@74731 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-umc-installer/debian/changelog
+++ b/ucs-school-umc-installer/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-installer (4.0.3-1) unstable; urgency=medium
+
+  * Bug #41007: close file descriptors of subprocesses
+
+ -- Florian Best <best@univention.de>  Thu, 24 Nov 2016 16:29:42 +0100
+
 ucs-school-umc-installer (4.0.2-1) unstable; urgency=medium
 
   * Bug #41007: fix python2.6 syntax, remove obsolete dependency
