--- a/ucs-school-lib/debian/changelog
+++ b/ucs-school-lib/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-lib (9.0.30-1) unstable; urgency=medium
+
+  * Bug #42399: adjust text
+
+ -- Florian Best <best@univention.de>  Fri, 25 Nov 2016 14:44:46 +0100
+
 ucs-school-lib (9.0.29-3) unstable; urgency=medium
 
   * Bug #42065: Create shares of workgroups with the host account instead of
