Bug #40527: handle authentication failure
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.1/ucs-school-4.1r2@74744 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (3.0.17-3) unstable; urgency=medium
+
+  * Bug #40527: handle authentication failure
+
+ -- Florian Best <best@univention.de>  Fri, 25 Nov 2016 16:40:32 +0100
+
 ucs-test-ucsschool (3.0.17-2) unstable; urgency=medium
 
   * Bug #40527: fix typo
