Bug #41344: hostname must not begin with a number
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.1/ucs-school-4.1r2@74750 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (3.0.17-5) unstable; urgency=low
+
+  * Bug #41344: hostname must not begin with a number
+
+ -- Daniel Troeder <troeder@univention.de>  Mon, 28 Nov 2016 09:34:47 +0100
+
 ucs-test-ucsschool (3.0.17-4) unstable; urgency=low
 
   * Bug #41568: modify tests to check it it is possible to start exam for
