Bug #43044 / Bug #43051: fix segfaults
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.1/ucs-school-4.1r2@74762 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/italc/debian/changelog
+++ b/italc/debian/changelog
@@ -1,3 +1,9 @@
+italc (2:2.0.25-12) unstable; urgency=medium
+
+  * Bug #43044 / Bug #43051: fix segfaults
+
+ -- Florian Best <best@univention.de>  Mon, 28 Nov 2016 13:41:37 +0100
+
 italc (2:2.0.25-11) unstable; urgency=medium
 
   * Bug #38213: fix amd64 build
