* Tag UCS@school import tests. This allows it to split these tests   into separate jobs (Bug #43043)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.1/ucs-school-4.1r2@74766 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,10 @@
+ucs-test-ucsschool (3.0.17-6) unstable; urgency=medium
+
+  * Tag UCS@school import tests. This allows it to split these tests
+    into separate jobs (Bug #43043)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Mon, 28 Nov 2016 16:00:33 +0100
+
 ucs-test-ucsschool (3.0.17-5) unstable; urgency=low
 
   * Bug #41344: hostname must not begin with a number
