--- a/italc/debian/changelog
+++ b/italc/debian/changelog
@@ -1,3 +1,9 @@
+italc (2:2.0.25-13) unstable; urgency=medium
+
+  * Bug #43051: revert patch
+
+ -- Florian Best <best@univention.de>  Mon, 28 Nov 2016 16:09:39 +0100
+
 italc (2:2.0.25-12) unstable; urgency=medium
 
   * Bug #43044 / Bug #43051: fix segfaults
