Bug #43044: fix threading issue which caused segfault
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.1/ucs-school-4.1r2@74777 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-umc-computerroom/debian/changelog
+++ b/ucs-school-umc-computerroom/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-computerroom (8.0.12-1) unstable; urgency=medium
+
+  * Bug #43044: fix threading issue which caused segfault
+
+ -- Florian Best <best@univention.de>  Mon, 28 Nov 2016 17:46:29 +0100
+
 ucs-school-umc-computerroom (8.0.11-1) unstable; urgency=medium
 
   * Bug #40901: fixup
