Bug #41749: add pupilgroups listener test, Bug #41989: fix 132_remove-old-homedirs to not use import anymore
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.1/ucs-school-4.1r2@74781 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,12 @@
+ucs-test-ucsschool (3.0.17-7) unstable; urgency=low
+
+  * Bug #41989: fix 132_remove-old-homedirs to not use import anymore, doesn't
+    work on slaves
+  * Bug #41749: add pupilgroups listener test (122_pupilgroups_updates_ucr)
+
+
+ -- Daniel Troeder <troeder@univention.de>  Mon, 28 Nov 2016 18:12:48 +0100
+
 ucs-test-ucsschool (3.0.17-6) unstable; urgency=medium
 
   * Tag UCS@school import tests. This allows it to split these tests
