Bug #41989: test also what happends if user is removed (not moved), Bug #41749: check school class members
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.1/ucs-school-4.1r2@74795 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,10 @@
+ucs-test-ucsschool (3.0.17-8) unstable; urgency=low
+
+  * Bug #41989: test also what happends if user is removed (not moved)
+  * Bug #41749: check school class members
+
+ -- Daniel Troeder <troeder@univention.de>  Tue, 29 Nov 2016 15:36:32 +0100
+
 ucs-test-ucsschool (3.0.17-7) unstable; urgency=low
 
   * Bug #41989: fix 132_remove-old-homedirs to not use import anymore, doesn't
