--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (3.0.17-9) unstable; urgency=medium
+
+  * Tag more UCS@school import tests (Bug #43043)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Tue, 29 Nov 2016 16:03:57 +0100
+
 ucs-test-ucsschool (3.0.17-8) unstable; urgency=low
 
   * Bug #41989: test also what happends if user is removed (not moved)
