--- a/ucs-school-umc-exam/debian/changelog
+++ b/ucs-school-umc-exam/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-exam (6.0.10-2) unstable; urgency=low
+
+  * Bug #37955: revert r74660, remove homedir before user creation
+
+ -- Daniel Troeder <troeder@univention.de>  Tue, 29 Nov 2016 16:24:24 +0100
+
 ucs-school-umc-exam (6.0.10-1) unstable; urgency=low
 
   * Bug #43045: do not copy RecordUID and SourceUID for exam users
