--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,14 @@
+ucs-test-ucsschool (3.0.17-10) unstable; urgency=low
+
+  * Bug #42313: 215_import-users_illegal_chars_in_username is taking over 1h,
+    reduce number of usernames
+  * Bug #41749: try using create_group() with check_for_drs_replication=False
+    to reduce runtime
+  * handle getpwnam() unable to read user account data
+  * Bug #41344: wait for s4connector before checking shadowExpire
+
+ -- Daniel Troeder <troeder@univention.de>  Wed, 30 Nov 2016 09:17:17 +0100
+
 ucs-test-ucsschool (3.0.17-9) unstable; urgency=medium
 
   * Tag more UCS@school import tests (Bug #43043)
