Bug #41344: revert r74750: with Bug #25354 fixed, hostnames can begin with a number
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.1/ucs-school-4.1r2@74824 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,10 @@
+ucs-test-ucsschool (3.0.17-11) unstable; urgency=low
+
+  * Bug #41344: revert r74750: with Bug #25354 fixed, hostnames can begin with
+    a number
+
+ -- Daniel Troeder <troeder@univention.de>  Wed, 30 Nov 2016 11:38:38 +0100
+
 ucs-test-ucsschool (3.0.17-10) unstable; urgency=low
 
   * Bug #42313: 215_import-users_illegal_chars_in_username is taking over 1h,
