--- a/ucs-school-umc-computerroom/debian/changelog
+++ b/ucs-school-umc-computerroom/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-computerroom (8.0.13-1) unstable; urgency=medium
+
+  * Bug #43044: also unregister signal handlers of VNC connection
+
+ -- Florian Best <best@univention.de>  Wed, 30 Nov 2016 15:29:57 +0100
+
 ucs-school-umc-computerroom (8.0.12-1) unstable; urgency=medium
 
   * Bug #43044: fix threading issue which caused segfault
