Bug #41007: use select() instead of permanently read
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.1/ucs-school-4.1r2@74845 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-umc-installer/debian/changelog
+++ b/ucs-school-umc-installer/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-installer (4.0.4-1) unstable; urgency=medium
+
+  * Bug #41007: use select() instead of permanently read
+
+ -- Florian Best <best@univention.de>  Wed, 30 Nov 2016 16:08:10 +0100
+
 ucs-school-umc-installer (4.0.3-1) unstable; urgency=medium
 
   * Bug #41007: close file descriptors of subprocesses
