* Tag more UCS@school import tests (Bug #43043)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.1/ucs-school-4.1r2@74847 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (3.0.17-12) unstable; urgency=medium
+
+  * Tag more UCS@school import tests (Bug #43043)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Wed, 30 Nov 2016 17:44:21 +0100
+
 ucs-test-ucsschool (3.0.17-11) unstable; urgency=low
 
   * Bug #41344: revert r74750: with Bug #25354 fixed, hostnames can begin with
