Bug #42503: fix syntax error from r74475
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.1/ucs-school-4.1r2@74926 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-import (14.0.16-39) unstable; urgency=low
+
+  * Bug #42503: fix syntax error from r74475
+
+ -- Daniel Troeder <troeder@univention.de>  Fri, 02 Dec 2016 10:09:33 +0100
+
 ucs-school-import (14.0.16-38) unstable; urgency=low
 
   * Bug #42112: don't change an existing expiration date when "deleting"
