Bug #41989: Staff users not replicated to edu-slaves
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.1/ucs-school-4.1r2@74928 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,10 @@
+ucs-test-ucsschool (3.0.17-13) unstable; urgency=low
+
+  * Bug #41989: Staff users not replicated to edu-slaves, remove irrelevant
+    school classes from test, improve logging
+
+ -- Daniel Troeder <troeder@univention.de>  Fri, 02 Dec 2016 10:51:46 +0100
+
 ucs-test-ucsschool (3.0.17-12) unstable; urgency=medium
 
   * Tag more UCS@school import tests (Bug #43043)
