--- a/ucs-school-old-homedirs/debian/changelog
+++ b/ucs-school-old-homedirs/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-old-homedirs (11.0.0-4) unstable; urgency=low
+
+  * Bug #41989: also handle non-school users
+
+ -- Daniel Troeder <troeder@univention.de>  Sun, 04 Dec 2016 08:56:05 +0100
+
 ucs-school-old-homedirs (11.0.0-3) unstable; urgency=low
 
   * Bug #41989: don't log complete traceback in case the LDAP server cannot be
