Bug #41989: reuse LDAP connection
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.1/ucs-school-4.1r2@74954 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-old-homedirs/debian/changelog
+++ b/ucs-school-old-homedirs/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-old-homedirs (11.0.0-5) unstable; urgency=low
+
+  * Bug #41989: reuse LDAP connection
+
+ -- Daniel Troeder <troeder@univention.de>  Sun, 04 Dec 2016 09:39:24 +0100
+
 ucs-school-old-homedirs (11.0.0-4) unstable; urgency=low
 
   * Bug #41989: also handle non-school users
