* 90_ucsschool/93_samba4_check_dc_selection: Skip test case again   (Bug #34223)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.1/ucs-school-4.1r2@74993 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,10 @@
+ucs-test-ucsschool (3.0.17-14) unstable; urgency=medium
+
+  * 90_ucsschool/93_samba4_check_dc_selection: Skip test case again
+    (Bug #34223)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Mon, 05 Dec 2016 16:48:26 +0100
+
 ucs-test-ucsschool (3.0.17-13) unstable; urgency=low
 
   * Bug #41989: Staff users not replicated to edu-slaves, remove irrelevant
