Bug #43051: fix segfaults during screenshot creation
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.1/ucs-school-4.1r2@75004 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/italc/debian/changelog
+++ b/italc/debian/changelog
@@ -1,3 +1,9 @@
+italc (2:2.0.25-16) unstable; urgency=medium
+
+  * Bug #43051: fix segfaults during screenshot creation
+
+ -- Florian Best <best@univention.de>  Mon, 05 Dec 2016 18:33:08 +0100
+
 italc (2:2.0.25-15) unstable; urgency=medium
 
   * Bug #43051: fix segfaults during screenshot creation
