--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (3.0.17-15) unstable; urgency=medium
+
+  * Bug #40527: enhance test case
+
+ -- Florian Best <best@univention.de>  Mon, 05 Dec 2016 20:32:28 +0100
+
 ucs-test-ucsschool (3.0.17-14) unstable; urgency=medium
 
   * 90_ucsschool/93_samba4_check_dc_selection: Skip test case again
