--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (3.0.17-16) unstable; urgency=medium
+
+  * 90_ucsschool/61_samba4_login: Disable case 2 (Bug #37698)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Tue, 06 Dec 2016 07:52:33 +0100
+
 ucs-test-ucsschool (3.0.17-15) unstable; urgency=medium
 
   * Bug #40527: enhance test case
