--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (3.0.17-17) unstable; urgency=medium
+
+  * Bug #40527: fix typo
+
+ -- Florian Best <best@univention.de>  Tue, 06 Dec 2016 09:14:11 +0100
+
 ucs-test-ucsschool (3.0.17-16) unstable; urgency=medium
 
   * 90_ucsschool/61_samba4_login: Disable case 2 (Bug #37698)
