--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (3.0.17-18) unstable; urgency=medium
+
+  * Bug #40527: fix missing class member
+
+ -- Florian Best <best@univention.de>  Wed, 07 Dec 2016 12:17:00 +0100
+
 ucs-test-ucsschool (3.0.17-17) unstable; urgency=medium
 
   * Bug #40527: fix typo
