--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (3.0.17-19) unstable; urgency=medium
+
+  * 122_pupilgroups_updates_ucr: Disable test case (Bug #43118)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Wed, 07 Dec 2016 12:32:57 +0100
+
 ucs-test-ucsschool (3.0.17-18) unstable; urgency=medium
 
   * Bug #40527: fix missing class member
