--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (3.0.17-20) unstable; urgency=medium
+
+  * Disable import tests in multiserver setups (Bug #43127)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Wed, 07 Dec 2016 12:40:52 +0100
+
 ucs-test-ucsschool (3.0.17-19) unstable; urgency=medium
 
   * 122_pupilgroups_updates_ucr: Disable test case (Bug #43118)
