--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (3.0.17-21) unstable; urgency=medium
+
+  * 91_samba4_gpc_two_way_replication: Disabled test case (Bug #34216)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Wed, 07 Dec 2016 13:27:14 +0100
+
 ucs-test-ucsschool (3.0.17-20) unstable; urgency=medium
 
   * Disable import tests in multiserver setups (Bug #43127)
