--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (3.0.17-22) unstable; urgency=medium
+
+  * Bug #40527: more typos
+
+ -- Florian Best <best@univention.de>  Wed, 07 Dec 2016 13:46:32 +0100
+
 ucs-test-ucsschool (3.0.17-21) unstable; urgency=medium
 
   * 91_samba4_gpc_two_way_replication: Disabled test case (Bug #34216)
