--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (3.0.17-23) unstable; urgency=low
+
+  * Bug #40473: removed bashism
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Wed, 07 Dec 2016 14:58:25 +0100
+
 ucs-test-ucsschool (3.0.17-22) unstable; urgency=medium
 
   * Bug #40527: more typos
