Bug #40901: fix exam starting/finishing when multiple browsers are involved
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.1/ucs-school-4.1r2@75078 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-umc-exam/debian/changelog
+++ b/ucs-school-umc-exam/debian/changelog
@@ -1,3 +1,10 @@
+ucs-school-umc-exam (6.0.10-3) unstable; urgency=medium
+
+  * Bug #40901: fix exam starting/finishing when multiple browsers are
+  	involved
+
+ -- Florian Best <best@univention.de>  Wed, 07 Dec 2016 14:59:17 +0100
+
 ucs-school-umc-exam (6.0.10-2) unstable; urgency=low
 
   * Bug #37955: revert r74660, remove homedir before user creation
