Bug #40901: fix exam starting/finishing when multiple browsers are involved
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.1/ucs-school-4.1r2@75079 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-umc-computerroom/debian/changelog
+++ b/ucs-school-umc-computerroom/debian/changelog
@@ -1,3 +1,10 @@
+ucs-school-umc-computerroom (8.0.14-1) unstable; urgency=medium
+
+  * Bug #40901: fix exam starting/finishing when multiple browsers are
+    involved
+
+ -- Florian Best <best@univention.de>  Wed, 07 Dec 2016 15:00:43 +0100
+
 ucs-school-umc-computerroom (8.0.13-1) unstable; urgency=medium
 
   * Bug #43044: also unregister signal handlers of VNC connection
