Bug #41007: Add special page for DC Backup installation
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.1/ucs-school-4.1r2@75099 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-umc-installer/debian/changelog
+++ b/ucs-school-umc-installer/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-installer (4.0.6-1) unstable; urgency=medium
+
+  * Bug #41007: Add special page for DC Backup installation
+
+ -- Florian Best <best@univention.de>  Wed, 07 Dec 2016 19:01:35 +0100
+
 ucs-school-umc-installer (4.0.5-1) unstable; urgency=medium
 
   * Bug #41007: fix backup installation;
