* essential/computerroom.py: increase timeout to 15 seconds. Lets wait   and see if it helps (Bug #42034)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.1/ucs-school-4.1r2@75100 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,10 @@
+ucs-test-ucsschool (3.0.17-24) unstable; urgency=medium
+
+  * essential/computerroom.py: increase timeout to 15 seconds. Lets wait
+    and see if it helps (Bug #42034)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Wed, 07 Dec 2016 21:16:40 +0100
+
 ucs-test-ucsschool (3.0.17-23) unstable; urgency=low
 
   * Bug #40473: removed bashism
