Bug #40418: reverted some changes of last commit
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.1/ucs-school-4.1r2@75103 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-metapackage/debian/changelog
+++ b/ucs-school-metapackage/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-metapackage (9.0.2-13) unstable; urgency=low
+
+  * Bug #40418: reverted some changes of last commit
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Wed, 07 Dec 2016 22:12:31 +0100
+
 ucs-school-metapackage (9.0.2-12) unstable; urgency=low
 
   * Bug #40418:
